# face-generation

./: .gitignore  README.md  checkpoints.dvc  data.dvc  pyproject.toml
.dvc/: config
configs/: main.yaml
configs/data_conf/: data.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml  vae.yaml
face-generation/: train.py
face-generation/models/: dcgan.py  vae.py
face-generation/pl_data/: __init__.py  vae_data.py
face-generation/pl_models/: __init__.py  vae.py
face-generation/scratch_models/: vae.py
face_generation/: inference.py  train.py
face_generation/pl_data/: vae_data.py
face_generation/pl_models/: vae.py
scripts/: download_data.py  train_val_split.py
